<?xml version="1.0"?>
<package format="2">

  <name>isi_hes_driver</name>
  <version>0.0.1</version>
  <description>
     IS Instruments ROS interface for interacting with HES
  </description>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>
  <author email="bknight@i3drobotics.com">Ben Knight</author>
  
  <license>MIT</license>

  <url type="website">http://www.is-instruments.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>isi_hes_msgs</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>isi_hes_msgs</exec_depend>
  

</package>

